--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,24 +1,18 @@
+node_modules/
+client/node_modules/
+server/node_modules/
+
 # Logs
-logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build
+dist/
+dist-ssr/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Environment files
+*.env
+
+# VSCode and IDEs
+.vscode/
+.idea/
